--- a/style.css
+++ b/style.css
@@ -67,21 +67,47 @@ body {
 
 /* Page Animation | My Solution */
 #page-1 h1 {
+  -webkit-animation: animate1 var(--animate-speed) forwards ease-in;
   animation: animate1 var(--animate-speed) forwards ease-in;
   transform: translateY(-1200px);
 }
 
 #page-1 p {
+  -webkit-animation: animate2 var(--animate-speed) forwards 2s;
   animation: animate2 var(--animate-speed) forwards 2s;
   transform: translateX(-1800px);
 }
 
 #page-1 .btn {
+  -webkit-animation: animate3 var(--animate-speed) forwards 3s;
   animation: animate3 var(--animate-speed) forwards 3s;
   transform: translateY(1200px);
 }
 
 /* Keyframes Rules */
+/* Browser Compatibility */
+@-webkit-keyframes animate1 {
+  40% {
+    transform: translateY(0);
+  }
+  
+  55% {
+    transform: translateY(-10px);
+  }
+
+  70% {
+    transform: translateY(0);
+  }
+
+  85% {
+    transform: translateY(-5px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
 @keyframes animate1 {
   40% {
     transform: translateY(0);
@@ -104,9 +130,23 @@ body {
   }
 }
 
+/* Browser Compatibility */
+@-webkit-keyframes animate2 {
+  100% {
+    transform: translateX(0);
+  }
+}
+
 @keyframes animate2 {
   100% {
     transform: translateX(0);
+  }
+}
+
+/* Browser Compatibility */
+@-webkit-keyframes animate3 {
+  100% {
+    transform: translateY(0);
   }
 }
 
